# BiliRecommBehaviorCorrection

./: .gitignore  LICENSE  README.md  pom.xml  命令.txt
.omc/sessions/: 598ef80d-b374-4247-b25d-fcb0a43eb84f.json  970fd88f-9d9b-48b5-a2ed-6588bc40b86b.json  d3cbc519-5249-4af1-8025-1ff2507e07b3.json
.omc/state/: hud-stdin-cache.json
.omc/state/sessions/324f0e29-5c1d-4753-8b2b-8ba18903871d/: hud-state.json
.omc/state/sessions/49b59d93-30bc-4cae-843b-1a218f843dbc/: hud-state.json
.omc/state/sessions/d3cbc519-5249-4af1-8025-1ff2507e07b3/: hud-state.json
cmd/: start.sh
design/: 主流程.drawio  优化方向.txt  黑白名单规则设计.xlsx
java/: agentlib-scan.cmd  pom.xml
java/cmd/: start.sh
java/design/: 主流程.drawio  优化方向.txt
java/src/main/resources/: application.yml  logback-spring.xml
java/src/main/resources/db/migration/: V1.0.2__del_tag_column.sql  V1.0.3__already_watch.sql
java/src/main/resources/mapper/: CookieHeaderDataMapper.xml  StatMapper.xml  TagMapper.xml  VideoRelateMapper.xml  WhiteListRuleMapper.xml
native-config/: proxy-config.json  reflect-config.json  resource-config.json
rust/: .mcp.json  1.json  CLAUDE.md  Cargo.toml  config.txt  get_video_url.json  search_keyword_data_value.json  skill编写文档.md
rust/.claude/: settings.local.json
rust/.claude/skills/bili-api/: SKILL.md
rust/.claude/skills/rbatis-skill/: README.md  SKILL.md
rust/migration/: 0.sql  1.sql  2.sql  3.sql  4.sql  5.sql  6.sql  7.sql  8.sql  9.sql
rust/src/: main.rs  single_test.rs
rust/src/api/: bili.rs  mod.rs  使用示例.txt
rust/src/app/: config.rs  constans.rs  database.rs  error.rs  global.rs  interceptor.rs  marco.rs  middleware.rs  mod.rs  response.rs  task_pool.rs
rust/src/dao/: file.rs  mod.rs  user.rs
rust/src/domain/: associate_rule.rs  config.rs  cookie_header_data.rs  dict.rs  dtos.rs  enumeration.rs  mod.rs  overview.rs  owner.rs  rbatis示例代码.txt  region.rs  tag.rs  task.rs  video_detail.rs
rust/src/domain/table/: associate_rule.html  cookie_header_data.html  dict.html  run.js  video_detail.html
rust/src/entity/: dtos.rs  enumeration.rs  mod.rs  models.rs
rust/src/extractor/: path.rs
rust/src/handler/: ai.rs  associate_rule.rs  associate_rule_handler.rs  bili_api_handler.rs  black_rule_handler.rs  config.rs  config_handler.rs  cookie_header_data_handler.rs  dict_handler.rs  file.rs  mod.rs  overview_handler.rs  region_handler.rs  rule_handler.rs  task_handler.rs  user.rs
rust/src/macros/: mod.rs  rb.rs
rust/src/service/: associate_rule_service.rs  bili_service.rs  black_rule_service.rs  config.rs  config_service.rs  cookie_header_data.rs  cookie_header_data_service.rs  dict_service.rs  mod.rs  overview_service.rs  owner_service.rs  region_service.rs  rule_service.rs  schedule_service.rs  tag_service.rs  task_service.rs  video_detail_service.rs
rust/src/utils/: collection_tool.rs  data_util.rs  glm_chat.rs  http.rs  id.rs  log.rs  migration.rs  mod.rs  segmenter_util.rs  table_util.rs  test_example.rs  thread_util.rs
rust/src/web/: mod.rs
src/main/java/io/github/cctyl/: Application.java  Init.java
src/main/java/io/github/cctyl/aop/: LoggingAspect.java
src/main/resources/: application.yml  application.yml.example  cn_stopwords.txt  logback-spring.xml
src/main/resources/db/migration/: V1.0.1__init.sql  V1.0.2__add_cookie_header.sql  V1.0.2__add_table_prepare_video.sql  V1.0.3__add_table_video_reply.sql
src/main/resources/mapper/: ConfigMapper.xml  CookieHeaderDataMapper.xml  DictMapper.xml  OwnerMapper.xml  PrepareVideoMapper.xml  StatMapper.xml  TagMapper.xml  VideoDetailMapper.xml  VideoRelateMapper.xml  VideoReplyMapper.xml  VideoTagMapper.xml  WhiteListRuleMapper.xml
(+282 files in other folders)
