[package]
name = "bili-recomm-behavior-correction"
version = "0.1.0"
edition = "2024"

[dependencies]
rbatis = { version = "4.8",features = ["debug_mode"]}
rbs = { version = "4"}
rbdc-sqlite = { version = "4" }


fast_log = "1.6"
# filetime = "0.2"



log = "0.4.27"
dotenvy = "0.15.7" #加载环境变量
jsonwebtoken = "9.2.0" # JWT处理
serde = { version = "1.0.183", features = ["derive"] }
serde_json = "1.0.104"


validator = { version = "0.20.0", features = ["derive"] }
#axum-valid = { version = "0.23.0", features = ["full_validator"] }
axum = { version = "0.8.4", features = ["macros","multipart"] }
# axum-extra = { version = "0.9.3", features = ["cookie"] }
tokio = { version = "1.39.3", features = ["full"] }
sqlx = { version = "0.8.6", features = ["sqlite", "runtime-tokio-rustls", "chrono" ] }

chrono = "0.4.42"
tower-http = { version = "0.5.2", features = ["cors","fs"] }
thiserror = "2.0.12"
anyhow = "1.0.98"
idgenerator = "2.0.0"
reqwest ={version = "0.12.23",default-features = false,features = ["rustls-tls","cookies","json","stream","charset"]}
md5 = "0.8.0"
hex = "0.4"
urlencoding = "2.1"
regex = "1"
sqlparser = "0.58.0"
rand = "0.9.2"
url = "2.5.7"
tokio-stream = "0.1.17"
jieba-rs = "0.8"

aho-corasick = "1.1.4"
tokio-cron-scheduler = "0.15.1"
#rust-embed = { version = "8.7.2", features = [
#
#    "axum",
#    "axum-ex",
#    "tokio",
#    "compression",
#    "debug-embed",
#    "include-exclude",
#    "include-flate",
#    "interpolate-folder-path",
#    "mime-guess",
#
#] }

